# Tic-tac-toe

./: CMakeLists.txt  README.md  board.cpp  board.h  cpu.cpp  cpu.h  game.cpp  game.h  human.cpp  human.h  main.cpp  player.cpp  player.h
